--- a/alpha1/public/index.html
+++ b/alpha1/public/index.html
@@ -19,7 +19,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title> Court Prototype - Alpha1 </title>
+    <title> Prototype: Probation in court service </title>
   </head>
   <body class="govuk-template__body js-enabled">
     <noscript>You need to enable JavaScript to run this app.</noscript>
